made navbar stick to the top

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="fs-4 font-monospace navbar-brand me-4" href="/">
             <img src="https://cdn-icons-png.flaticon.com/512/3209/3209265.png"
