--- a/templates/pybin/home.html
+++ b/templates/pybin/home.html
@@ -32,60 +32,105 @@
                               class="codemirror-textarea"
                               style="height: 300px;
                                      width: 100%"></textarea>
-                    <div>
-                        {{ form.category.label }}
-                        {{ form.category }}
+                    <div class="form_bottom d-flex">
+                        <div class="form_left d-flex-inline">
+                            <div>
+                                {{ form.category.label }}
+                                {{ form.category }}
+                            </div>
+                            <div>
+                                {{ form.tags.label }}
+                                {{ form.tags(placeholder="software, tutorial, data")}}
+                            </div>
+                            <div>
+                                {{ form.syntax.label }}
+                                {{ form.syntax }}
+                            </div>
+                            <div>
+                                {{ form.expiration.label }}
+                                {{ form.expiration }}
+                            </div>
+                            <div>
+                                {{ form.exposure.label }}
+                                {{ form.exposure }}
+                            </div>
+                            <div>
+                                {{ form.title.label }}
+                                {{ form.title }}
+                            </div>
+                            {{ form.submit }}
+                        </div>
+                        <div class="form_right d-flex-inline ">
+                            <div class="form_user mx-5 p-4">
+                                {% if current_user.is_authenticated %}
+                                    <div class="form_avatar">
+                                        <a href="/u/{{ current_user.username }}/">
+                                            <img src="{{ profile_image()}}" width="50" height="50">
+                                        </a>
+                                    </div>
+                                    <div class="form_text">
+                                        <div class="form_name">
+                                            <b>{{ current_user.username }}</b>
+                                        </div>
+                                        <div class="form_sign">
+                                            <a class="btn btn-outline-dark" href="/u/{{ current_user.username }}/">My Pybin</a>
+                                            <a class="btn btn-outline-dark" href="/user/profile/">My Settings</a>
+                                        </div>
+                                    </div>
+                                {% else %}
+                                    <div class="form_user">
+                                        <div class="form_avatar">
+                                            <img src="{{url_for('static', filename='img/guest.png')}}" width="50" height="50">
+                                        </div>
+                                        <div class="form_text">
+                                            <div class="form_name">
+                                                Hello
+                                                <b>Guest</b>
+                                            </div>
+                                            <div class="form_sign">
+                                                <a class="btn btn-outline-dark" href="/signup/">Sign Up</a>
+                                                or
+                                                <a class="btn btn-outline-dark" href="/login/">Login</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form_auth"></div>
+                                {% endif %}
+                            </div>
+                            <div style="padding-bottom:20px; padding-top:20px"></div>
+                        </div>
                     </div>
-                    <div>
-                        {{ form.tags.label }}
-                        {{ form.tags(placeholder="software, tutorial, data")}}
-                    </div>
-                    <div>
-                        {{ form.syntax.label }}
-                        {{ form.syntax }}
-                    </div>
-                    <div>
-                        {{ form.expiration.label }}
-                        {{ form.expiration }}
-                    </div>
-                    <div>
-                        {{ form.exposure.label }}
-                        {{ form.exposure }}
-                    </div>
-                    <div>
-                        {{ form.title.label }}
-                        {{ form.title }}
-                    </div>
-                    {{ form.submit }}
                 </form>
             </div>
             <div class="sidebar col-sm-3">
-                <div class="sidebar_title">
-                    <a href="#">My Pastes</a>
-                </div>
-                <ul class="sidebar_menu">
-                    {% if not my_pastes() %}
-                        <li>
-                            <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
-                        </li>
-                    {% endif %}
-                    {% for paste in my_pastes() %}
-                        <li>
-                            {% if paste.exposure == "Public" %}
-                                <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Unlisted' %}
-                                <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Private' %}
-                                <i class="fa fa-lock" aria-hidden="true"></i>
-                            {% endif %}
-                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
-                            <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.size }} KB
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
+                {% if current_user.is_authenticated %}
+                    <div class="sidebar_title">
+                        <a href="#">My Pastes</a>
+                    </div>
+                    <ul class="sidebar_menu">
+                        {% if not my_pastes() %}
+                            <li>
+                                <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
+                            </li>
+                        {% endif %}
+                        {% for paste in my_pastes() %}
+                            <li>
+                                {% if paste.exposure == "Public" %}
+                                    <i class="fa fa-globe" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Unlisted' %}
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Private' %}
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                {% endif %}
+                                <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                                <div class="details">
+                                    {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                    {{ paste.created|timesince }}| {{ paste.size }} KB
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
                 <div class="sidebar_sticky">
                     <div style="padding-bottom:10px; padding-top:20px;"></div>
                 </div>
