--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -47,32 +47,34 @@
                 </form>
             </div>
             <div class="sidebar col-sm-3">
-                <div class="sidebar_title">
-                    <a href="#">My Pastes</a>
-                </div>
-                <ul class="sidebar_menu">
-                    {% if not my_pastes() %}
-                        <li>
-                            <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
-                        </li>
-                    {% endif %}
-                    {% for paste in my_pastes() %}
-                        <li>
-                            {% if paste.exposure == "Public" %}
-                                <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Unlisted' %}
-                                <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Private' %}
-                                <i class="fa fa-lock" aria-hidden="true"></i>
-                            {% endif %}
-                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
-                            <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.size }} KB
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
+                {% if current_user.is_authenticated %}
+                    <div class="sidebar_title">
+                        <a href="#">My Pastes</a>
+                    </div>
+                    <ul class="sidebar_menu">
+                        {% if not my_pastes() %}
+                            <li>
+                                <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
+                            </li>
+                        {% endif %}
+                        {% for paste in my_pastes() %}
+                            <li>
+                                {% if paste.exposure == "Public" %}
+                                    <i class="fa fa-globe" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Unlisted' %}
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Private' %}
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                {% endif %}
+                                <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                                <div class="details">
+                                    {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                    {{ paste.created|timesince }}| {{ paste.size }} KB
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
                 <div class="sidebar_sticky"></div>
                 <div class="sidebar_title">
                     <a href="#">Public Pastes</a>
