--- a/templates/pybin/send_message.html
+++ b/templates/pybin/send_message.html
@@ -11,7 +11,7 @@
                 <div class="content_title">Compose A New Message</div>
                 <div class="content_text">
                     <i class="fa fa-info-circle" aria-hidden="true"></i>
-                    On this page you can send a private message to any Pastebin user. This user will get notified via email that he/she has a new private message. 
+                    On this page you can send a private message to any Pastebin user. This user will get notified via email that he/she has a new private message.
                 </div>
                 <div style="background-color: red" class="content_text">
                     <i class="fa fa-info-circle" aria-hidden="true"></i>
@@ -19,32 +19,34 @@
                 </div>
             </div>
             <div class="sidebar col-sm-3">
-                <div class="sidebar_title">
-                    <a href="#">My Pastes</a>
-                </div>
-                <ul class="sidebar_menu">
-                    {% if not my_pastes() %}
-                        <li>
-                            <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
-                        </li>
-                    {% endif %}
-                    {% for paste in my_pastes() %}
-                        <li>
-                            {% if paste.exposure == "Public" %}
-                                <i class="fa fa-globe" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Unlisted' %}
-                                <i class="fa fa-link" aria-hidden="true"></i>
-                            {% elif paste.exposure == 'Private' %}
-                                <i class="fa fa-lock" aria-hidden="true"></i>
-                            {% endif %}
-                            <a href="/{{ paste.id }}">{{ paste.title }}</a>
-                            <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
-                                {{ paste.created|timesince }}| {{ paste.size }} KB
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
+                {% if current_user.is_authenticated %}
+                    <div class="sidebar_title">
+                        <a href="#">My Pastes</a>
+                    </div>
+                    <ul class="sidebar_menu">
+                        {% if not my_pastes() %}
+                            <li>
+                                <i class="fa fa-globe" aria-hidden="true"></i>Nothing here yet...
+                            </li>
+                        {% endif %}
+                        {% for paste in my_pastes() %}
+                            <li>
+                                {% if paste.exposure == "Public" %}
+                                    <i class="fa fa-globe" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Unlisted' %}
+                                    <i class="fa fa-link" aria-hidden="true"></i>
+                                {% elif paste.exposure == 'Private' %}
+                                    <i class="fa fa-lock" aria-hidden="true"></i>
+                                {% endif %}
+                                <a href="/{{ paste.id }}">{{ paste.title }}</a>
+                                <div class="details">
+                                    {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                    {{ paste.created|timesince }}| {{ paste.size }} KB
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
                 <div class="sidebar_sticky"></div>
                 <div class="sidebar_title">
                     <a href="#">Public Pastes</a>
@@ -82,4 +84,3 @@
     <script>hljs.highlightAll();</script>
     <script>hljs.initLineNumbersOnLoad();</script>
 {% endblock %}
-
