fixed profile_image context processor

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -67,7 +67,7 @@
                             </li>
                         </ul>
                     </li>
-                    <img src="{{ profile_image()}}" width="40" height="40">
+                    <img src="{{ profile_image(current_user)}}" width="40" height="40">
                 </ul>
             {% else %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
