--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         Avatar:
-                        <img src="{{ profile_image()}}">
+                        <img src="{{ profile_image(current_user)}}">
                         [ <a href="/user/change-avatar/">change avatar</a> ]
                     </div>
                     {{ form.submit }}
