updated titles for all templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <!-- Icon Library -->
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Pybin.com - #2 paste tool since 2023!</title>
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
         {% include 'navbar.html' %}
