--- a/templates/pybin/home.html
+++ b/templates/pybin/home.html
@@ -1,5 +1,8 @@
 <!-- templates/authentication/home.html -->
 {% extends "base.html" %}
+{% block title %}
+    Pybin.com - #2 paste tool since 2023!
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
