--- a/templates/pybin/edit_comment.html
+++ b/templates/pybin/edit_comment.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Edit comment: {{ document.content[:50] }} - Pybin.com
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
