--- a/templates/pybin/edit_paste.html
+++ b/templates/pybin/edit_paste.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Edit paste: {{ document.title }} - Pybin.com
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
