--- a/templates/pybin/error.html
+++ b/templates/pybin/error.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Pybin.com - Error {{error_code}}
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
