--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Pybin.com - Change Your Password
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
