--- a/templates/pybin/profile.html
+++ b/templates/pybin/profile.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Pybin.com - My Profile
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
