--- a/templates/pybin/send_message.html
+++ b/templates/pybin/send_message.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    Pybin.com - Compose A New Message
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
