--- a/templates/pybin/send_message.html
+++ b/templates/pybin/send_message.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
-    Pybin.com - Compose A New Message
-{% endblock %}
+{% block title %}Pybin.com - Compose A New Message{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
