--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
         <!-- Icon Library -->
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>{% block title %}{% endblock %}</title>
+        <title>
+            {% block title %}{% endblock %}
+        </title>
     </head>
     <body>
         {% include 'navbar.html' %}
