--- a/templates/pybin/avatar.html
+++ b/templates/pybin/avatar.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
-    Pybin.com - Change Your Avatar
-{% endblock %}
+{% block title %}Pybin.com - Change Your Avatar{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
