--- a/templates/pybin/home.html
+++ b/templates/pybin/home.html
@@ -1,8 +1,6 @@
 <!-- templates/authentication/home.html -->
 {% extends "base.html" %}
-{% block title %}
-    Pybin.com - #2 paste tool since 2023!
-{% endblock %}
+{% block title %}Pybin.com - #2 paste tool since 2023!{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
@@ -83,7 +81,9 @@
                                 {% else %}
                                     <div class="form_user">
                                         <div class="form_avatar">
-                                            <img src="{{url_for('static', filename='img/guest.png')}}" width="50" height="50">
+                                            <img src="{{ url_for('static', filename='img/guest.png')}}"
+                                                 width="50"
+                                                 height="50">
                                         </div>
                                         <div class="form_text">
                                             <div class="form_name">
