--- a/templates/pybin/message.html
+++ b/templates/pybin/message.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
-    Private Message: {{message.title}}
-{% endblock %}
+{% block title %}Private Message: {{ message.title }}{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
