--- a/templates/pybin/my_comments.html
+++ b/templates/pybin/my_comments.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
-    {{user.username|capitalize}}'s Comments - Pybin.com
-{% endblock %}
+{% block title %}{{ user.username|capitalize }}'s Comments - Pybin.com{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
