--- a/templates/pybin/my_messages.html
+++ b/templates/pybin/my_messages.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
-    Pybin.com - My Private Messages
-{% endblock %}
+{% block title %}Pybin.com - My Private Messages{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
