--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,13 +37,13 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="/u/{{ current_user.username }}/comments/">
-                                    <i class="fa fa-comments" aria-hidden="true"></i>
+                                    <i class="fa fa-commenting" aria-hidden="true"></i>
                                     MY COMMENTS
                                 </a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="/messages/">
-                                    <i class="fa fa-inbox" aria-hidden="true"></i>
+                                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
                                     MY MESSAGES
                                 </a>
                             </li>
