--- a/templates/pybin/document.html
+++ b/templates/pybin/document.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="errors">
                 {% with messages = get_flashed_messages() %}
-                    {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
+                    {% if messages %}<div class="alert alert-danger">{{ messages[0] }}</div>{% endif %}
                 {% endwith %}
             </div>
             <div class="notice">
