--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -12,33 +12,51 @@
                 {% endwith %}
             </div>
             <div class="content col">
-                <form method="POST" action="/user/password/">
-                    {{ form.csrf_token }}
-                    <div>
-                        Password Status:
-                        {% if current_user.password_hash %}
-                            <p class="password_set">Ok!</p>
-                        {% else %}
-                            <p class="password_not_set">Not set!</p>
-                        {% endif %}
+                <div class="content_title">
+                    Change Your Password
+                <hr>
+                </div>
+                <div class="user_page d-flex">
+                    <div class="form_frame_left col-sm-6">
+                        <form method="POST" action="/user/password/">
+                            {{ form.csrf_token }}
+                            <div>
+                                Password Status:
+                                {% if current_user.password_hash %}
+                                    <p class="password_set">Ok!</p>
+                                {% else %}
+                                    <p class="password_not_set">Not set!</p>
+                                {% endif %}
+                            </div>
+                            {% if current_user.password_hash %}
+                                <div>
+                                    {{ form.current_password.label }}
+                                    {{ form.current_password(placeholder="Your current password")}}
+                                </div>
+                            {% endif %}
+                            <div>
+                                {{ form.password.label }}
+                                {{ form.password(placeholder="Your new password") }}
+                            </div>
+                            <div>
+                                {{ form.password_confirm.label }}
+                                {{ form.password_confirm(placeholder="Your new password again") }}
+                            </div>
+                            {{ form.recaptcha }}
+                            {{ form.submit }}
+                        </form>
                     </div>
-                    {% if current_user.password_hash %}
-                        <div>
-                            {{ form.current_password.label }}
-                            {{ form.current_password(placeholder="Your current password")}}
-                        </div>
-                    {% endif %}
-                    <div>
-                        {{ form.password.label }}
-                        {{ form.password(placeholder="Your new password") }}
-                    </div>
-                    <div>
-                        {{ form.password_confirm.label }}
-                        {{ form.password_confirm(placeholder="Your new password again") }}
-                    </div>
-                    {{ form.recaptcha }}
-                    {{ form.submit }}
-                </form>
+                    <fieldset class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
+                        <h6>ACCOUNT RELATED PAGES</h3>
+                        <a class="btn btn-outline-dark" href="/user/profile/">Profile</a>
+                        <br>
+                        <a class="btn btn-outline-dark" href="/user/password/">Password</a>
+                        <br>
+                        <a class="btn btn-outline-dark" href="/user/change-avatar/">Avatar</a>
+                        <br>
+                    </fieldset>
+
+                </div>
             </div>
             <div class="sidebar col-sm-3">
                 {% if current_user.is_authenticated %}
