--- a/templates/pybin/document.html
+++ b/templates/pybin/document.html
@@ -77,7 +77,7 @@
                             <div class="left d-inline-flex">
                                 <!-- TODO: Implement Search by Document Syntax -->
                                 <a class="btn btn-outline-secondary" href="#">
-                                    {% if document.syntax != "None" %}
+                                    {% if document.syntax != "plaintext" %}
                                         {{ document.syntax }}
                                     {% else %}
                                         text
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="source_text">
-                            <pre><code>{{document.content}}</code></pre>
+                            <pre><code class="language-{{document.syntax}}">{{document.content}}</code></pre>
                         </div>
                     </div>
                     <div class="raw_paste_data">
@@ -184,7 +184,7 @@
                                                                href="/{{ document.id }}#{{ comment.id }}">#</a>
                                                             <!-- TODO: Implement Search by Document Syntax -->
                                                             <a class="btn btn-outline-secondary" href="#">
-                                                                {% if comment.syntax != "None" %}
+                                                                {% if comment.syntax != "plaintext" %}
                                                                     {{ comment.syntax }}
                                                                 {% else %}
                                                                     text
@@ -279,7 +279,7 @@
                                                                                        href="/{{ document.id }}#{{ reply.id }}">#</a>
                                                                                     <!-- TODO: Implement Search by Document Syntax -->
                                                                                     <a class="btn btn-outline-secondary" href="#">
-                                                                                        {% if reply.syntax != "None" %}
+                                                                                        {% if reply.syntax != "plaintext" %}
                                                                                             {{ reply.syntax }}
                                                                                         {% else %}
                                                                                             text
@@ -377,7 +377,7 @@
                                                                                                        href="/{{ document.id }}#{{ reply2.id }}">#</a>
                                                                                                     <!-- TODO: Implement Search by Document Syntax -->
                                                                                                     <a class="btn btn-outline-secondary" href="#">
-                                                                                                        {% if reply2.syntax != "None" %}
+                                                                                                        {% if reply2.syntax != "plaintext" %}
                                                                                                             {{ reply2.syntax }}
                                                                                                         {% else %}
                                                                                                             text
@@ -516,7 +516,7 @@
                                 {% endif %}
                                 <a href="/{{ paste.id }}">{{ paste.title }}</a>
                                 <div class="details">
-                                    {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                    {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                     {{ paste.created|timesince }}| {{ paste.size }} KB
                                 </div>
                             </li>
@@ -540,7 +540,7 @@
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                 {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
