--- a/templates/pybin/message.html
+++ b/templates/pybin/message.html
@@ -70,7 +70,7 @@
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                 {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
@@ -92,7 +92,7 @@
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                 {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
