--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -80,7 +80,7 @@
                                 {% endif %}
                                 <a href="/{{ paste.id }}">{{ paste.title }}</a>
                                 <div class="details">
-                                    {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                    {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                     {{ paste.created|timesince }}| {{ paste.size }} KB
                                 </div>
                             </li>
@@ -103,7 +103,7 @@
                             {% endif %}
                             <a href="/{{ paste.id }}">{{ paste.title }}</a>
                             <div class="details">
-                                {% if paste.syntax != "None" %}{{ paste.syntax|capitalize }} |{% endif %}
+                                {% if paste.syntax != "plaintext" %}{{ paste.syntax|capitalize }} |{% endif %}
                                 {{ paste.created|timesince }}| {{ paste.size }} KB
                             </div>
                         </li>
